[#-] feat: Add host information to participant lookup API